API seems running well in container

--- a/2 - Machine Learning/1 - machine_learning.ipynb
+++ b/2 - Machine Learning/1 - machine_learning.ipynb
@@ -1559,11 +1559,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n",
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n",
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n",
       "c:\\Users\\Christophe\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
@@ -1573,7 +1573,7 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n"
      ]
     },
@@ -1586,7 +1586,7 @@
       "R2 score de LogisticRegression on test set :  0.4927691480259436\n",
       "\n",
       "R2 score de GradientBoostingRegressor on training set :  0.7842335792764243\n",
-      "R2 score de GradientBoostingRegressor on test set :  0.7057033337673964\n",
+      "R2 score de GradientBoostingRegressor on test set :  0.7053483411112389\n",
       "\n",
       "R2 score de ElasticNet on training set :  0.5735419669389648\n",
       "R2 score de ElasticNet on test set :  0.5470373377215343\n"
@@ -1596,9 +1596,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n",
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n"
      ]
     },
@@ -1615,7 +1615,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_19656\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Christophe\\AppData\\Local\\Temp\\ipykernel_15772\\3494193368.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  scores_df = scores_df.append({'model': name_model, \\\n"
      ]
     },
@@ -1656,7 +1656,7 @@
        "      <th>4</th>\n",
        "      <td>GradientBoostingRegressor</td>\n",
        "      <td>0.784234</td>\n",
-       "      <td>0.705703</td>\n",
+       "      <td>0.705348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1695,7 +1695,7 @@
       "text/plain": [
        "                       model  r2_score_train  r2_score_test\n",
        "6               XGBRegressor        0.953206       0.723070\n",
-       "4  GradientBoostingRegressor        0.784234       0.705703\n",
+       "4  GradientBoostingRegressor        0.784234       0.705348\n",
        "1                      Ridge        0.715687       0.685588\n",
        "0           LinearRegression        0.716136       0.685346\n",
        "2                      Lasso        0.640511       0.606671\n",
@@ -1751,7 +1751,7 @@
       "Grid search...\n",
       "...Done.\n",
       "Best hyperparameters :  {'booster': 'dart', 'max_depth': 4, 'n_estimators': 90, 'n_jobs': 0, 'reg_alpha': 3, 'reg_lambda': 1}\n",
-      "Best R2 score :  0.7750721026705104\n"
+      "Best R2 score :  0.756941764538621\n"
      ]
     }
    ],
@@ -1883,11 +1883,6 @@
     "print(\"R2 score on training set : \", r2_score(Y_train, Y_train_pred))\n",
     "print(\"R2 score on test set : \", r2_score(Y_test, Y_test_pred))\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -1906,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.3 (tags/v3.9.3:e723086, Apr  2 2021, 11:35:20) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.9.3"
   },
   "orig_nbformat": 4,
   "vscode": {
