--- a/2 - Machine Learning/2 - train_save_best_model.ipynb
+++ b/2 - Machine Learning/2 - train_save_best_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,15 +236,16 @@
        "                                                   &#x27;has_air_conditioning&#x27;,\n",
        "                                                   &#x27;automatic_car&#x27;,\n",
        "                                                   &#x27;has_getaroun...\n",
-       "                              gamma=0, gpu_id=-1, grow_policy=&#x27;depthwise&#x27;,\n",
-       "                              importance_type=None, interaction_constraints=&#x27;&#x27;,\n",
+       "                              feature_types=None, gamma=0, gpu_id=-1,\n",
+       "                              grow_policy=&#x27;depthwise&#x27;, importance_type=None,\n",
+       "                              interaction_constraints=&#x27;&#x27;,\n",
        "                              learning_rate=0.300000012, max_bin=256,\n",
-       "                              max_cat_to_onehot=4, max_delta_step=0,\n",
-       "                              max_depth=4, max_leaves=0, min_child_weight=1,\n",
-       "                              missing=nan, monotone_constraints=&#x27;()&#x27;,\n",
-       "                              n_estimators=90, n_jobs=0, num_parallel_tree=1,\n",
-       "                              predictor=&#x27;auto&#x27;, random_state=0, reg_alpha=3,\n",
-       "                              reg_lambda=1, ...))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;columntransformer&#x27;,\n",
+       "                              max_cat_threshold=64, max_cat_to_onehot=4,\n",
+       "                              max_delta_step=0, max_depth=4, max_leaves=0,\n",
+       "                              min_child_weight=1, missing=nan,\n",
+       "                              monotone_constraints=&#x27;()&#x27;, n_estimators=90,\n",
+       "                              n_jobs=0, num_parallel_tree=1, predictor=&#x27;auto&#x27;,\n",
+       "                              random_state=0, ...))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;columntransformer&#x27;,\n",
        "                 ColumnTransformer(transformers=[(&#x27;num&#x27;,\n",
        "                                                  Pipeline(steps=[(&#x27;scaler&#x27;,\n",
        "                                                                   StandardScaler())]),\n",
@@ -259,15 +260,16 @@
        "                                                   &#x27;has_air_conditioning&#x27;,\n",
        "                                                   &#x27;automatic_car&#x27;,\n",
        "                                                   &#x27;has_getaroun...\n",
-       "                              gamma=0, gpu_id=-1, grow_policy=&#x27;depthwise&#x27;,\n",
-       "                              importance_type=None, interaction_constraints=&#x27;&#x27;,\n",
+       "                              feature_types=None, gamma=0, gpu_id=-1,\n",
+       "                              grow_policy=&#x27;depthwise&#x27;, importance_type=None,\n",
+       "                              interaction_constraints=&#x27;&#x27;,\n",
        "                              learning_rate=0.300000012, max_bin=256,\n",
-       "                              max_cat_to_onehot=4, max_delta_step=0,\n",
-       "                              max_depth=4, max_leaves=0, min_child_weight=1,\n",
-       "                              missing=nan, monotone_constraints=&#x27;()&#x27;,\n",
-       "                              n_estimators=90, n_jobs=0, num_parallel_tree=1,\n",
-       "                              predictor=&#x27;auto&#x27;, random_state=0, reg_alpha=3,\n",
-       "                              reg_lambda=1, ...))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">columntransformer: ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[(&#x27;num&#x27;,\n",
+       "                              max_cat_threshold=64, max_cat_to_onehot=4,\n",
+       "                              max_delta_step=0, max_depth=4, max_leaves=0,\n",
+       "                              min_child_weight=1, missing=nan,\n",
+       "                              monotone_constraints=&#x27;()&#x27;, n_estimators=90,\n",
+       "                              n_jobs=0, num_parallel_tree=1, predictor=&#x27;auto&#x27;,\n",
+       "                              random_state=0, ...))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">columntransformer: ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[(&#x27;num&#x27;,\n",
        "                                 Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler())]),\n",
        "                                 [&#x27;mileage&#x27;, &#x27;engine_power&#x27;]),\n",
        "                                (&#x27;cat&#x27;,\n",
@@ -280,13 +282,13 @@
        "                                  &#x27;has_speed_regulator&#x27;, &#x27;winter_tires&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">num</label><div class=\"sk-toggleable__content\"><pre>[&#x27;mileage&#x27;, &#x27;engine_power&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">StandardScaler</label><div class=\"sk-toggleable__content\"><pre>StandardScaler()</pre></div></div></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">cat</label><div class=\"sk-toggleable__content\"><pre>[&#x27;model_key&#x27;, &#x27;fuel&#x27;, &#x27;paint_color&#x27;, &#x27;car_type&#x27;, &#x27;private_parking_available&#x27;, &#x27;has_gps&#x27;, &#x27;has_air_conditioning&#x27;, &#x27;automatic_car&#x27;, &#x27;has_getaround_connect&#x27;, &#x27;has_speed_regulator&#x27;, &#x27;winter_tires&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder(drop=&#x27;first&#x27;)</pre></div></div></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" ><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=0.5, booster=&#x27;dart&#x27;, callbacks=None,\n",
        "             colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
        "             early_stopping_rounds=None, enable_categorical=False,\n",
-       "             eval_metric=None, gamma=0, gpu_id=-1, grow_policy=&#x27;depthwise&#x27;,\n",
-       "             importance_type=None, interaction_constraints=&#x27;&#x27;,\n",
-       "             learning_rate=0.300000012, max_bin=256, max_cat_to_onehot=4,\n",
-       "             max_delta_step=0, max_depth=4, max_leaves=0, min_child_weight=1,\n",
-       "             missing=nan, monotone_constraints=&#x27;()&#x27;, n_estimators=90, n_jobs=0,\n",
-       "             num_parallel_tree=1, predictor=&#x27;auto&#x27;, random_state=0, reg_alpha=3,\n",
-       "             reg_lambda=1, ...)</pre></div></div></div></div></div></div></div>"
+       "             eval_metric=None, feature_types=None, gamma=0, gpu_id=-1,\n",
+       "             grow_policy=&#x27;depthwise&#x27;, importance_type=None,\n",
+       "             interaction_constraints=&#x27;&#x27;, learning_rate=0.300000012, max_bin=256,\n",
+       "             max_cat_threshold=64, max_cat_to_onehot=4, max_delta_step=0,\n",
+       "             max_depth=4, max_leaves=0, min_child_weight=1, missing=nan,\n",
+       "             monotone_constraints=&#x27;()&#x27;, n_estimators=90, n_jobs=0,\n",
+       "             num_parallel_tree=1, predictor=&#x27;auto&#x27;, random_state=0, ...)</pre></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('columntransformer',\n",
@@ -304,18 +306,19 @@
        "                                                   'has_air_conditioning',\n",
        "                                                   'automatic_car',\n",
        "                                                   'has_getaroun...\n",
-       "                              gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
-       "                              importance_type=None, interaction_constraints='',\n",
+       "                              feature_types=None, gamma=0, gpu_id=-1,\n",
+       "                              grow_policy='depthwise', importance_type=None,\n",
+       "                              interaction_constraints='',\n",
        "                              learning_rate=0.300000012, max_bin=256,\n",
-       "                              max_cat_to_onehot=4, max_delta_step=0,\n",
-       "                              max_depth=4, max_leaves=0, min_child_weight=1,\n",
-       "                              missing=nan, monotone_constraints='()',\n",
-       "                              n_estimators=90, n_jobs=0, num_parallel_tree=1,\n",
-       "                              predictor='auto', random_state=0, reg_alpha=3,\n",
-       "                              reg_lambda=1, ...))])"
+       "                              max_cat_threshold=64, max_cat_to_onehot=4,\n",
+       "                              max_delta_step=0, max_depth=4, max_leaves=0,\n",
+       "                              min_child_weight=1, missing=nan,\n",
+       "                              monotone_constraints='()', n_estimators=90,\n",
+       "                              n_jobs=0, num_parallel_tree=1, predictor='auto',\n",
+       "                              random_state=0, ...))])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['src/20230108-153507-xgbregressor.joblib']"
+       "['src/20230109-153321-xgbregressor.joblib']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +372,13 @@
     "df['target_variable'] = target_variable\n",
     "df.to_csv(f'src/{timestr}-features_dataframe.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
